removing the table stubb and updating the table

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -43,7 +43,7 @@
 \newcommand{\dnu}{$\Delta \nu$}
 \newcommand{\numax}{$\nu_{\mathrm{max}}$}
 
-\newcommand{\nkoi}{1132}
+\newcommand{\nkoi}{1102}
 
 \newcommand{\naigrain}{333}
 \newcommand{\nmcquillan}{100}
@@ -157,8 +157,8 @@ To test the effectiveness of this method, we infer rotation periods from
 We also demonstrate that it works well on real data, by inferring
     rotation periods for \nkoimcq\ \Kepler\ stars with previously measured
     periods.
-    % \response{We provide a table of rotation periods for these \nkoi\ \Kepler\ objects of
-    % interest and their posterior probability density function samples.}
+    \response{We provide a table of rotation periods for these \nkoi\ \Kepler\ objects of
+    interest and their posterior probability density function samples.}
 Because this method delivers posterior probability density functions, it will
     enable hierarchical studies involving stellar rotation, particularly those
     involving population modelling, such as inferring stellar ages,
@@ -1196,9 +1196,9 @@ As a result, after this initial test, we subsequently adjusted the priors and
 re-fit all the KOIs.
 The final priors and parameter ranges that we used are in Table
 \ref{tab:koipriors}.
-% The posterior samples of the model parameters for the \Kepler\ objects of
-% interest are available online:
-% \url{https://zenodo.org/record/292340\#.WKWpiBIrJE4}.
+The posterior samples of the model parameters for the \Kepler\ objects of
+interest are available online:
+\url{https://zenodo.org/record/292340\#.WKWpiBIrJE4}.
 
 \begin{table*}
 \begin{center}
@@ -1227,13 +1227,12 @@ setting the priors and ranges for the GP hyperparameters.
 % Notably, the GP method recovers periods systematically slightly larger than
 % \citet{Mcquillan2013}---a likely consequence of correcting for the ACF peak
 % measurement bias discussed in Section \ref{sec:acf}.
-
-% \response{The new GP rotation periods calculated for \nkoi\ KOIs are provided in an
-% online table accompanying this paper.
+\response{The new GP rotation periods calculated for \nkoi\ KOIs are provided in an
+online table accompanying this paper.
 % The first few lines of this table is shown below
 % (table \ref{tab:koi_periods}).
-% Samples of the rotation period posterior PDFs are available online:
-% \url{https://doi.org/10.5281/zenodo.804440}}
+Samples of the rotation period posterior PDFs are available online:
+\url{https://doi.org/10.5281/zenodo.804440}}
 
 % \begin{table*}
 % \begin{center}
