fixing typos. About to submit

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -3095,3 +3095,21 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...795...64F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Vansaders2016,
+   author = {{van Saders}, J.~L. and {Ceillier}, T. and {Metcalfe}, T.~S. and
+	{Silva Aguirre}, V. and {Pinsonneault}, M.~H. and {Garc{\'{\i}}a}, R.~A. and
+	{Mathur}, S. and {Davies}, G.~R.},
+    title = "{Weakened magnetic braking as the origin of anomalously rapid rotation in old field stars}",
+  journal = {\nat},
+archivePrefix = "arXiv",
+   eprint = {1601.02631},
+ primaryClass = "astro-ph.SR",
+     year = 2016,
+    month = jan,
+   volume = 529,
+    pages = {181-184},
+      doi = {10.1038/nature16168},
+   adsurl = {http://adsabs.harvard.edu/abs/2016Natur.529..181V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
