--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -158,7 +158,7 @@ We also demonstrate that it works well on real data, by inferring
     rotation periods for \nkoimcq\ \Kepler\ stars with previously measured
     periods.
     \response{We provide a table of rotation periods for these and many
-    more, altogether \nkoi \Kepler\ objects of interest and their posterior
+    more, altogether \nkoi\ \Kepler\ objects of interest, and their posterior
     probability density function samples.}
 Because this method delivers posterior probability density functions, it will
     enable hierarchical studies involving stellar rotation, particularly those
@@ -1283,9 +1283,9 @@ produce a good fit.
 There may be ways to further improve the precision of the periodogram method,
 for example modelling the detailed shapes of peaks in the periodogram instead
 of adopting the point closest to the derivative zero-point.
-We consider it likely that such alterations would produce only slight changes
-to the results, for example because peaks in the LS periodograms of Kepler
-light curves are usually narrow.
+However, we consider it likely that such alterations would produce only slight
+changes to the results, for example because peaks in the LS periodograms of
+Kepler light curves are usually narrow.
 It is difficult to assess the reason for the ACF incorrect recoveries because
 we do not have the individual ACFs computed by the \citet{Aigrain2015} Tel
 Aviv team, however it seems that the ACF method is more sensitive than the LS
