removing figures path

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -384,7 +384,7 @@ importantly provides a justified uncertainty estimate.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\columnwidth, clip=true]{figures/koi_lc_demo.pdf}
+\includegraphics[width=\columnwidth, clip=true]{koi_lc_demo.pdf}
 \caption[A light curve with a GP model.]
 {Light curve of KIC \kepexample, an active star with a rotation period of
 $\sim$ \kepexampleperiod\ days.
@@ -799,7 +799,7 @@ period of \aigrainexampleperiod days.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\columnwidth, clip=true]{figures/period_hist.pdf}
+\includegraphics[width=\columnwidth, clip=true]{period_hist.pdf}
 \caption{A histogram of the rotation periods used to generate the \naigrain\
 simulated light curves in \citet{Aigrain2015}.}
 \label{fig:period_hist}
@@ -808,7 +808,7 @@ simulated light curves in \citet{Aigrain2015}.}
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\columnwidth, clip=true]{figures/demo_lc.pdf}
+\includegraphics[width=\columnwidth, clip=true]{demo_lc.pdf}
 \caption[A simulated light curve.]
 {An example simulated light curve. This `star' has a rotation period of
 \aigrainexampleperiod\ days.}
@@ -890,7 +890,7 @@ Parameter & Prior & Bounds\\
 \begin{figure*}
 \begin{center}
 % \includegraphics[width=6in, clip=true]{compare_mcmc.pdf}
-\includegraphics[width=6in, clip=true]{figures/comparison_acfprior_03_10.pdf}
+\includegraphics[width=6in, clip=true]{comparison_acfprior_03_10.pdf}
 \caption{The `true' rotation periods used to generate \naigrain\
 simulated light curves vs the rotation periods measured using the GP
 technique with an informed, ACF-based prior.
@@ -909,7 +909,7 @@ The ACF-informed prior on rotation period used to generate these results is
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=6in, clip=true]{figures/comparison_noprior_02_13.pdf}
+\includegraphics[width=6in, clip=true]{comparison_noprior_02_13.pdf}
 \caption{The `true' rotation periods used to generate \naigrain\
 simulated light curves vs the rotation periods measured using the GP
 technique with an uninformative prior.
@@ -929,7 +929,7 @@ An uninformative prior, flat in the natural log of the rotation period between
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=6in, clip=true]{figures/corner_plot.pdf}
+\includegraphics[width=6in, clip=true]{corner_plot.pdf}
 \caption{Marginal posterior PDFs of the QP GP model parameters, fit to the
     simulated light curve in figure \ref{fig:demo_lc}.
     The blue line in the period panel shows the injected period.
@@ -959,7 +959,7 @@ An uninformative prior, flat in the natural log of the rotation period between
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\columnwidth, clip=true]{figures/demo_ACF.pdf}
+\includegraphics[width=\columnwidth, clip=true]{demo_ACF.pdf}
 \caption[ACF of a simulated light curve.]
 {An autocorrelation function of the simulated light curve shown in figure
 \ref{fig:demo_lc}.
@@ -1040,7 +1040,7 @@ method results is \gpRMS\ days.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=6in, clip=true]{figures/compare_acf.pdf}
+\includegraphics[width=6in, clip=true]{compare_acf.pdf}
 \caption[ACF results.]
 {The `true' rotation periods used to generate \naigrain\ simulated light
 curves vs the rotation periods measured using the ACF technique.
@@ -1137,7 +1137,7 @@ MAD of \oldpercentpgramMAD.}
 \begin{figure*}
 \begin{center}
 % \includegraphics[width=6in, clip=true]{compare_pgram.pdf}
-\includegraphics[width=6in, clip=true]{figures/compare_pgram_filtered_35.pdf}
+\includegraphics[width=6in, clip=true]{compare_pgram_filtered_35.pdf}
 \caption[LS periodogram results.]
 {The `true' rotation periods used to generate \naigrain\ simulated light
 curves vs the rotation periods measured using a LS periodogram technique.
@@ -1256,7 +1256,7 @@ Samples of the rotation period posterior PDFs are available online:
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=6in, clip=true]{figures/comparison_koi_01_23.pdf}
+\includegraphics[width=6in, clip=true]{comparison_koi_01_23.pdf}
 \caption[Comparison with McQuillan results.]
 {A comparison of our GP rotation period measurements to those of
 \citet{Mcquillan2013}.
